--- a/index.html
+++ b/index.html
@@ -2,22 +2,50 @@
 layout: default
 ---
 
-<div id="starter">
-	<div class="jumbotron">
-		<div class="container">
-	  		<h1>L'association qui vous ressemble</h1>
-	  		<p>Le fait-main, l'artisanat, la création par vous et pour vous</p>
-	  		<p><a class="btn btn-primary btn-lg" href="about.html" role="button">En savoir plus</a></p>	
-	  	</div>
-	</div>
-</div>
+<header>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <!--<img class="img-responsive" src="img/profile.png" alt="">-->
+                <div class="intro-text">
+                    <span class="name">L'association qui vous ressemble</span>
+                    <hr class="star-light">
+                    <span class="skills">Le fait-main, l'artisanat, la création par vous et pour vous</span>
+                </div>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <a href="#" class="btn btn-lg btn-outline">
+                    <i class="fa fa-info"></i>&nbsp;&nbsp;En savoir plus
+                </a>
+            </div>
+        </div>
 
-<div class="page-header text-center">
- 	<h1>Actualités</h1>
-  	<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
-</div>
+    </div>
+</header>
 
-<div class="container">
+<section id="news">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+               	<h2>Actualités</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <p>Evénements, artistes, show-room, ateliers du moment</p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <a href="#" class="btn btn-lg btn-success">
+                    <i class="fa fa-spinner"></i>&nbsp;&nbsp;En cours de construction
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!--<div class="container">
 	<div class="row">
 		<div class="col-xs-6 col-md-3">
 		    <a href="#" class="thumbnail">
@@ -40,9 +68,30 @@ layout: default
 		    </a>
 		</div>
 	</div>
-</div>
+</div>-->
 
-<div class="container">
+<section id="agenda" class="success">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+               	<h2>Agenda</h2>
+                <hr class="star-light">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <p>Des ateliers pour les petits comme les grands</p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <a href="#" class="btn btn-lg btn-outline">
+                    <i class="fa fa-spinner"></i>&nbsp;&nbsp;En cours de construction
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--<div class="container">
 	<div class="row">
 		<div class="col-sm-12">
 			<div class="page-header text-center">
@@ -59,98 +108,28 @@ layout: default
 			</div>
 		</div>
 	</div>
-</div>
+</div>-->
 
-	<!---PLANNING-->
-
-	<div class="page-header text-center">
-  		<h1>Notre communauté artistique</h1>
-  		<p class="lead">L'art sous toutes ses formes</p>
-	</div>	
-
-	<!--SLIDER -->
-
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<div id="mutlicarousel" class="carousel slide" data-ride="carousel">
-			    	<ol class="carousel-indicators">
-			        	<li data-target="#mutlicarousel" data-slide-to="0" class="active"></li>
-			        	<li data-target="#mutlicarousel" data-slide-to="1"></li>
-			        	<li data-target="#mutlicarousel" data-slide-to="2"></li>
-			      	</ol>
-			      	<div class="carousel-inner" role="listbox">
-			        	<div class="item active">
-			        		<div class="row">
-			        			<div class="col-sm-4">
-			        				<a href="artist.html">
-			        					<img data-src="holder.js/350x300/auto/#777:#555/">		
-			        				</a>
-			        			</div>
-			        			<div class="col-sm-4">
-			        				<a href="artist.html">
-			        					<img data-src="holder.js/350x300/auto/#777:#555/">		
-			        				<a href="artist.html">
-			        			</div>
-			        			<div class="col-sm-4">
-			        				<a href="artist.html">
-			        					<img data-src="holder.js/350x300/auto/#777:#555/">		
-			        				<a href="artist.html">
-			        			</div>
-			        		</div>
-			        	</div>
-			        	<div class="item">
-			          		<div class="row">
-			        			<div class="col-sm-4">
-			        				<a href="artist.html">
-			        					<img data-src="holder.js/350x300/auto/#777:#555/">		
-			        				<a href="artist.html">
-			        			</div>
-			        			<div class="col-sm-4">
-			        				<a href="artist.html">
-			        					<img data-src="holder.js/350x300/auto/#777:#555/">		
-			        				<a href="artist.html">
-			        			</div>
-			        			<div class="col-sm-4">
-			        				<a href="artist.html">
-			        					<img data-src="holder.js/350x300/auto/#777:#555/">		
-			        				<a href="artist.html">
-			        			</div>
-			        		</div>
-			        	</div>
-			        	<div class="item">
-			          		<div class="row">
-			        			<div class="col-sm-4">
-			        				<a href="artist.html">
-			        					<img data-src="holder.js/350x300/auto/#777:#555/">
-			        				<a href="artist.html">
-			        			</div>
-			        			<div class="col-sm-4">
-			        				<a href="artist.html">
-			        					<img data-src="holder.js/350x300/auto/#777:#555/">
-			        				<a href="artist.html">
-			        			</div>
-			        			<div class="col-sm-4">
-			        				<a href="artist.html">
-			        					<img data-src="holder.js/350x300/auto/#777:#555/">		
-			        				<a href="artist.html">
-			        			</div>
-			        		</div>
-			        	</div>
-			      	</div>
-			      	<a class="left carousel-control" href="#mutlicarousel" role="button" data-slide="prev">
-			        	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			        	<span class="sr-only">Précédent</span>
-			      	</a>
-			      	<a class="right carousel-control" href="#mutlicarousel" role="button" data-slide="next">
-			        	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			        	<span class="sr-only">Suivant</span>
-			      	</a>
-			    </div>
-			</div>
-		</div>
-	</div>
-
+<section id="community">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+               	<h2>Notre communauté artistique</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <p>L'art sous toutes ses formes</p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <a href="#" class="btn btn-lg btn-success">
+                    <i class="fa fa-spinner"></i>&nbsp;&nbsp;En cours de construction
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
 	
 </body>
 
