--- a/project/index.html
+++ b/project/index.html
@@ -3,111 +3,127 @@ layout: default
 title: Créaphé - Projet
 ---
 
-<header id="association">
+<section id="association">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Association Créaphé fondée en 2015</h2>
-                <hr class="star-light">
+                <h1>Association Créaphé fondée en 2015</h1>
+                <hr>
             </div>
         </div>
         <div class="row">
-        	<div class="col-lg-3">
-                <p>Expression créative, fait main et artisanat sur la métropole lilloise.</p>
+        	<div class="col-lg-6">
+				<img class="img-responsive" src="{{site.baseurl}}/public/img/creaphe_image_asso.png">
             </div>
-            <div class="col-lg-3">
-                <p>Lieu de partage, de rencontres, pour tous ceux qui aiment créer, du plus grand au plus petit, pour des activités variées.</p>
-            </div>
-            <div class="col-lg-3">
-                <p>Soutien aux créatifs désirant se faire connaître, par des actions de communication.</p>
-            </div>
-            <div class="col-lg-3">
-                <p>Convivialité autour d'un café.</p>
+            <div class="col-lg-6">
+            	<p>« CRÉAPHÉ » est une association fondée en 2015, dédiée à l’expression créative, au fait main et à l’artisanat sur la métropole lilloise.<br><br>C’est avant tout un lieu de partage, chaleureux, amical, convivial et de rencontres pour tous ceux qui aiment créer, du plus grand au plus petit ! Plusieurs activités et outils sont proposés : ateliers d’artistes, à thèmes, d’éveil, kits, ou même libres; formations d’insertion professionnelle; places de coworking; bibliothèque; débats; etc.<br><br>Mais ce n’est pas que ça ! Nous mettons également, au cœur de notre projet, le soutien aux créatifs, désireux de se faire connaître. Pour cela, nous assurons les actions de communication suivantes : référencement sur le site web; ventes privées, expositions, show-room; magazine de promotion; créations de kits entre artistes; présences sur les marchés des créateurs et salons.<br><br>Tout en gardant la convivialité et l’esprit du café, qui manque de nos jours !</p>
             </div>
         </div>
     </div>
-</header>
+</section>
 
 <section id="members">
 	<div class="container">
 		<div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Membres actuels</h2>
-                <hr class="star-primary">
+                <h1>L'équipe</h1>
+                <hr>
             </div>
         </div>
 		<div class="row">
 			<div class="col-lg-3">
-				<p>Tania Blanquart</p>
+				<p class="name lead">Tania Blanquart</p>
 				<blockquote>
 					<p>Fais de ta vie un rêve, et d’un rêve, une réalité</p>
 					<footer>Le Petit Prince de Antoine de Saint-Exupéry</footer>
 				</blockquote>
 			</div>
 			<div class="col-lg-9">
-				<p>Tania Blanquart, née au Portugal, connaît depuis autour des champs agricoles et vignobles familiaux. Arrière-petite-fille d’un charpentier, un père doué pour le dessin et une maman manuelle débrouillarde en temps de crise ! Cursus en musique, diplôme professionnel en arts. Etudes supérieures en ingénierie et marketing. Mariée avec un Ch’ti, maman poule de 2 petits poussins. Et toujours passionnée par les arts.
-
-				« J'ai eu un enfance très heureuse. j'ai passé mon temps chez mes grand-parents, une famille très simple.. Je voyais mon papie déssiner et construire des jouets en bois, ma mamie en tricotant une poupée ou un vêtement.. Des moments chalereux, de partage, dont moi j'avais le plaisir de participer! Aujourd'hui dans une socièté aussi préssée, j'aimerais pouvoir transmettre les mêmes valeurs qui me sont transmises... Créer pour moi un café créatif solidaire est la construction d'un rêve, d'un image des ces vieux temps d'amour, partage, education et convivialité."</p>
+				<p>Maman de deux petits poussins, passionnée par l'art et la création, elle est la fondatrice du projet. Elle mène depuis Septembre 2014, le début des études, la définition et la mise en place du projet.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-3">
-				<p>Annelise Ayatsou</p>
+				<p class="name lead">Annelise Ayatsou</p>
 				<blockquote>
 					<p>Soyez le changement que vous voulez voir dans le monde.</p>
-					<footer>GHANDI</footer>
+					<footer>Ghandi</footer>
 				</blockquote>
 			</div>
 			<div class="col-lg-9">
-				<p>C’est donc avec la rencontre d’Annelise dans un cours de couture qui a permis de créer cette association. 
-					Annelise Ayatsou, bordelaise d’origine est maman d’une petite choue de 2 ans. Passionnée par la danse, le théâtre et photo. Attiré par tout type d’expression artistique, participation à des projets solidaires en tant que bénévole. D’un point de vue professionnel, c’est en tant que chef de projet marketing, planneur stratégique ou encore responsable de communication que j’évolue en tant que salariée puis indépendant.
-					<br><br>
-					« Aujourd’hui je travaille à la maison sur le développement de projet personnel : récupération créative (couture, déco, etc.), écriture d’histoire pour ma fille, herboriste/aromathérapie. 
-					J’aspire à créer un lieu ou je pourrai sortir de cet isolement, partager et me nourrir des talents d’autres personnes et pourquoi pas mettre en place des ateliers sur ces thématiques. » 
-					<br><br>
-					Le rassemblement des ces 3 profils ont créer l’association en Janvier 2015.Un projet surtout communautaire, humain, avec la partage de valeurs solidaires dont tout le monde est créatif et peut donner ailes à la créativité sur tous les formes! Que vous aimez les arts plastiques, la couture, la photographie, cartonnage, ou tout autre passion créative, vous êtes le bienvenue parmi nous!</p>
+				<p>Maman d'une petite puce, elle a rejoint le projet au cours de la phase de création du nom et du statut associatif en janvier 2015. Elle a inauguré une phase d'ouverture et d'appropriation pour tout partenaire intéressé par le projet.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-3">
-				<p>Alexandre Blanquart</p>
+				<p class="name lead">Alexandre Blanquart</p>
 				<blockquote>
 					<p>Beaucoup encore il te reste à apprendre.</p>
 					<footer>Maître Yoda</footer>
 				</blockquote>
 			</div>
 			<div class="col-lg-9">
-				<p>Heureux papa passioné par les nouvelles technologies et architecte web au sein d'un éditeur de logiciel, je cherche à partager mes connaissances à travers ce projet.</p>
+				<p>Papa deux petits poussins, passionné par les nouvelles technologies, il a été également présent depuis le début du projet. Il est le responsable du site web.</p>
 			</div>
 		</div>
 	</div>
 </section>
 
-<section id="objectives" class="success">
+<section id="objectives">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                	<h2>Nos objectifs</h2>
-                <hr class="star-light">
+                <hr>
             </div>
         </div>
         <div class="row">
-            <p>Le créaphé a pour but les suivants objectifs:
-				<ul>
-					<li>Accessible à tous, encourager un mélange culturel, générationnel, social.
-					« N’importe qui peut venir, même les mamans avec enfants, puisqu’ils seront initiés à l’éveil créatif. Mamans au foyer, comme moi, nous pouvons vite démotivées. N’aimerez-vous pas une petite heure ou deux pour vos créations, sans devoir trouver une solution de secours pour les enfants?! »</li>
-					<li>Transmission de valeurs de partage, de l’entraide solidaire à travers l’art</li>
-					<li>Encourager et accompagner les pratiques artistiques</li>
-					<li>Privilégier la coopération entre les individus
-					« N’est-il pas plus agréable de se retrouver ensemble que de rester seule isolée à la maison?! »</li>
-					<li>Créer un ancrage local à travers l’art entre les citoyens: Inciter les habitants à s’impliquer dans des projets collectifs et soutenir les initiatives individuelles ou communes
-					« On se bat ensemble pour nos causes et nos valeurs! Une communauté unie, forte : l’union fait la force non? »</li>
-					<li>Participer à d’autres mouvements artistiques ensemble (salons, expositions, fêtes, ventes privés…)</li>
-					<li>Transmission et échanges de nos savoir-faire (ateliers, déplacements vers des cafés citoyens, associations, écoles…)</li>
-					<li>Respect de l’environnement et l’être humain
-					« La pratique des projets autour de l’éducation, de le développement durable, la sensibilisation pour des questions environnementales ce sont des thématiques qui nous voudrions débattre artistiquement »</li>
-				</ul>
-			</p>
+            <div class="col-lg-6">
+            	<p>Le créaphé a pour but les suivants objectifs:
+					<ul>
+						<li>Encourager un mélange culturel, générationnel, social;
+						« N’importe qui peut venir, même les mamans avec enfants, puisqu’ils seront initiés à l’éveil créatif. Mamans au foyer, nous pouvons vite démotivées. N’aimerez-vous pas une petite heure ou deux pour vos créations, sans devoir trouver une solution de secours pour les enfants?! »</li>
+
+						<li>Transmettre des valeurs de partage, d'entraide solidaire, de respect de l'environment à travers l’art;</li>
+
+						<li>Encourager et favoriser la mixité culturelle, sociale, et intergénrationnelle, source de vraie richesse à transmettre;</li>
+
+						<li>Créer un ancrage local à travers l’art entre les citoyens: Inciter les habitants à s’impliquer dans des projets collectifs et soutenir les initiatives individuelles ou communes;
+						« On se bat ensemble pour nos causes et nos valeurs! Une communauté unie, forte : l’union fait la force non? »</li>
+
+						<li>Participer, transmettre, échanger les savoir-faire d'autres mouvements artistiques;</li>
+
+						<li>Promouvoir la création et les créatifs.»</li>
+					</ul>
+				</p>
+            </div>
+            <div class="col-lg-6">
+				<img class="img-responsive" src="{{site.baseurl}}/public/img/arbre_mains.png">
+            </div>
+        </div>
+    </div>
+</section>
+<section id="culture">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+               	<h2>La culture créative: nos valeurs</h2>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+            	<p>De l'action sociale</p>
+            	<p>Créaphé travaille à renforcer le lien entre les personnes issues de tous horizons et met en place des porjets humains au profit de tous</p>
+            </div>
+            <div class="col-lg-12">
+            	<p>De l'action culturelle et artistique</p>
+            	<p>Entre la couture et le numérique, entre le tricot et la photo, entre la sérigraphie et la musique, il n'y a parfois qu'un pas à faire! Nous vous invitons à le franchir par toute une série d'actions, de rencontres, d'expositions, d'ateliers.</p>
+            </div>
+            <div class="col-lg-12">
+            	<p>De l'action éducative</p>
+            	<p>Créaphé mettra en place des projets afin de favoriser l'apprentissage par le ludique et le créatif, dans une démarche d'éducation populaire. Nous souhaitons mettre en place des supports pédagogiques: livres, vidéos, internet, kits, magazines.</p>
+            </div>
         </div>
     </div>
 </section>
