--- a/index.html
+++ b/index.html
@@ -2,41 +2,27 @@
 layout: default
 ---
 
-<header>
+<section id="marketing">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <!--<img class="img-responsive" src="img/profile.png" alt="">-->
-                <div class="intro-text">
-                    <span class="name">L'association qui vous ressemble</span>
-                    <hr class="star-light">
-                    <span class="skills">Le fait-main, l'artisanat, la création par vous et pour vous</span>
-                </div>
-            </div>
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="#" class="btn btn-lg btn-outline">
+            <div class="col-lg-12 text-center">
+                <h1>L'association qui vous ressemble</h1>
+                <p class="lead">Le fait-main, l'artisanat, la création par vous et pour vous</p>
+                <a href="{{site.baseurl}}/project" class="btn btn-lg btn-default">
                     <i class="fa fa-info"></i>&nbsp;&nbsp;En savoir plus
                 </a>
             </div>
         </div>
-
     </div>
-</header>
+</section>
 
 <section id="news">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-               	<h2>Actualités</h2>
-                <hr class="star-primary">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p>Evénements, artistes, show-room, ateliers du moment</p>
-            </div>
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="#" class="btn btn-lg btn-success">
+               	<h1>Actualités</h1>
+                <p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
+                <a href="#" class="btn btn-lg btn-default disabled">
                     <i class="fa fa-spinner"></i>&nbsp;&nbsp;En cours de construction
                 </a>
             </div>
@@ -70,20 +56,13 @@ layout: default
 	</div>
 </div>-->
 
-<section id="agenda" class="success">
+<section id="agenda">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-               	<h2>Agenda</h2>
-                <hr class="star-light">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p>Des ateliers pour les petits comme les grands</p>
-            </div>
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="#" class="btn btn-lg btn-outline">
+                <h1>Agenda</h1>
+                <p class="lead">Des ateliers pour les petits comme les grands</p>
+                <a href="#" class="btn btn-lg btn-default disabled">
                     <i class="fa fa-spinner"></i>&nbsp;&nbsp;En cours de construction
                 </a>
             </div>
@@ -114,16 +93,9 @@ layout: default
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-               	<h2>Notre communauté artistique</h2>
-                <hr class="star-primary">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p>L'art sous toutes ses formes</p>
-            </div>
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="#" class="btn btn-lg btn-success">
+                <h1>Notre communauté créative</h1>
+                <p class="lead">L'art sous toutes ses formes</p>
+                <a href="#" class="btn btn-lg btn-default disabled">
                     <i class="fa fa-spinner"></i>&nbsp;&nbsp;En cours de construction
                 </a>
             </div>
