some new improvments on text

--- a/project/index.html
+++ b/project/index.html
@@ -31,38 +31,38 @@ title: Créaphé - Projet
             </div>
         </div>
 		<div class="row">
-			<div class="col-lg-3">
+			<div class="col-lg-6">
 				<p class="name lead">Tania Blanquart</p>
 				<blockquote>
 					<p>Fais de ta vie un rêve, et d’un rêve, une réalité</p>
 					<footer>Le Petit Prince de Antoine de Saint-Exupéry</footer>
 				</blockquote>
 			</div>
-			<div class="col-lg-9">
+			<div class="col-lg-6">
 				<p>Maman de deux petits poussins, passionnée par l'art et la création, elle est la fondatrice du projet. Elle mène depuis Septembre 2014, le début des études, la définition et la mise en place du projet.</p>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-3">
+			<div class="col-lg-6">
 				<p class="name lead">Annelise Ayatsou</p>
 				<blockquote>
 					<p>Soyez le changement que vous voulez voir dans le monde.</p>
 					<footer>Ghandi</footer>
 				</blockquote>
 			</div>
-			<div class="col-lg-9">
+			<div class="col-lg-6">
 				<p>Maman d'une petite puce, elle a rejoint le projet au cours de la phase de création du nom et du statut associatif en janvier 2015. Elle a inauguré une phase d'ouverture et d'appropriation pour tout partenaire intéressé par le projet.</p>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-3">
+			<div class="col-lg-6">
 				<p class="name lead">Alexandre Blanquart</p>
 				<blockquote>
 					<p>Beaucoup encore il te reste à apprendre.</p>
 					<footer>Maître Yoda</footer>
 				</blockquote>
 			</div>
-			<div class="col-lg-9">
+			<div class="col-lg-6">
 				<p>Papa deux petits poussins, passionné par les nouvelles technologies, il a été également présent depuis le début du projet. Il est le responsable du site web.</p>
 			</div>
 		</div>
@@ -79,21 +79,15 @@ title: Créaphé - Projet
         </div>
         <div class="row">
             <div class="col-lg-6">
-            	<p>Le créaphé a pour but les suivants objectifs:
+            	<p class="lead">Créaphé a pour but les suivants objectifs:
 					<ul>
-						<li>Encourager un mélange culturel, générationnel, social;
-						« N’importe qui peut venir, même les mamans avec enfants, puisqu’ils seront initiés à l’éveil créatif. Mamans au foyer, nous pouvons vite démotivées. N’aimerez-vous pas une petite heure ou deux pour vos créations, sans devoir trouver une solution de secours pour les enfants?! »</li>
-
-						<li>Transmettre des valeurs de partage, d'entraide solidaire, de respect de l'environment à travers l’art;</li>
-
-						<li>Encourager et favoriser la mixité culturelle, sociale, et intergénrationnelle, source de vraie richesse à transmettre;</li>
-
-						<li>Créer un ancrage local à travers l’art entre les citoyens: Inciter les habitants à s’impliquer dans des projets collectifs et soutenir les initiatives individuelles ou communes;
-						« On se bat ensemble pour nos causes et nos valeurs! Une communauté unie, forte : l’union fait la force non? »</li>
-
-						<li>Participer, transmettre, échanger les savoir-faire d'autres mouvements artistiques;</li>
-
-						<li>Promouvoir la création et les créatifs.»</li>
+						<li><strong>Encourager</strong> et <strong>accompagner</strong> les pratiques artistiques,</li>
+						<li>Créer du <strong>lien social</strong> pour rompre l'isolement des familles,</li>
+						<li>Encourager et favoriser <strong>la mixité culturelle, sociale, et intergénrationnelle</strong>, source de vraie richesse à transmettre,</li>
+						<li>Transmettre des valeurs de <strong>partage</strong>, d'entraide <strong>solidaire</strong>, de respect de <strong>l'environment</strong> à travers l’art,</li>
+						<li>S'appuyer sur la création artistique et culturelle, pour renforcer et créer un <strong>ancrage local</strong>,</li>
+						<li>Participer, transmettre, échanger les <strong>savoir-faire</strong> d'autres mouvements artistiques,</li>
+						<li><strong>Promouvoir</strong> la création et les créatifs.</li>
 					</ul>
 				</p>
             </div>
@@ -113,15 +107,15 @@ title: Créaphé - Projet
         </div>
         <div class="row">
             <div class="col-lg-12">
-            	<p>De l'action sociale</p>
+            	<p class="lead">De l'action sociale</p>
             	<p>Créaphé travaille à renforcer le lien entre les personnes issues de tous horizons et met en place des porjets humains au profit de tous</p>
             </div>
             <div class="col-lg-12">
-            	<p>De l'action culturelle et artistique</p>
+            	<p class="lead">De l'action culturelle et artistique</p>
             	<p>Entre la couture et le numérique, entre le tricot et la photo, entre la sérigraphie et la musique, il n'y a parfois qu'un pas à faire! Nous vous invitons à le franchir par toute une série d'actions, de rencontres, d'expositions, d'ateliers.</p>
             </div>
             <div class="col-lg-12">
-            	<p>De l'action éducative</p>
+            	<p class="lead">De l'action éducative</p>
             	<p>Créaphé mettra en place des projets afin de favoriser l'apprentissage par le ludique et le créatif, dans une démarche d'éducation populaire. Nous souhaitons mettre en place des supports pédagogiques: livres, vidéos, internet, kits, magazines.</p>
             </div>
         </div>
