--- a/project/index.html
+++ b/project/index.html
@@ -7,7 +7,7 @@ title: Créaphé - Projet
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h1>Association Créaphé fondée en 2015</h1>
+                <h1>L'association</h1>
                 <hr>
             </div>
         </div>
@@ -73,7 +73,7 @@ title: Créaphé - Projet
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-               	<h2>Nos objectifs</h2>
+               	<h1>Nos objectifs</h1>
                 <hr>
             </div>
         </div>
@@ -101,7 +101,7 @@ title: Créaphé - Projet
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-               	<h2>La culture créative: nos valeurs</h2>
+               	<h1>La culture créative: nos valeurs</h1>
                 <hr>
             </div>
         </div>
