--- a/contact/index.html
+++ b/contact/index.html
@@ -23,21 +23,25 @@ title: Créaphé - Contact
       google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 
-<section class="success">
+<section>
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h1>N'hésitez pas à nous contacter</h1>
-                <hr class="star-light">
+                <h1>Nous contacter</h1>
+                <hr>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-6">
-                <p><a href="mailto:bonjour.creaphe@gmail.com" class="btn btn-sm btn-outline">
+                <p class="lead">Pour réaliser ce projet, nous avons besoin de vous et de votre soutien</p>
+                <p><a class="btn btn-sm btn-default">
+                    <i class="fa fa-facebook"></i>&nbsp;&nbsp;Page facebook
+                </a></p>
+                <p><a href="mailto:bonjour.creaphe@gmail.com" class="btn btn-sm btn-default">
                     <i class="fa fa-envelope-o"></i>&nbsp;&nbsp;bonjour.creaphe@gmail.com
                 </a></p>
-                <p><a class="btn btn-sm btn-outline">
-                    <i class="fa fa-home"></i>Lille (à la recherche actuellement d'un local)
+                <p><a class="btn btn-sm btn-default">
+                    <i class="fa fa-home"></i>&nbsp;&nbsp;Lille (à la recherche actuellement d'un local)
                 </a></p>
             </div>
             <div class="col-lg-6">
