--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ title: Créaphé
         </div>
         <div class="row">
             <div class="col-lg-6">
-                <p class="lead">Pour nous soutenir, adhérer, donner un coup de main et concrètiser ce projet, contactez-nous: </p>
+                <p class="lead">Pour nous soutenir, adhérer, donner un coup de main et concrétiser ce projet, contactez-nous: </p>
                 <p><a class="btn btn-sm btn-default">
                     <i class="fa fa-facebook"></i>&nbsp;&nbsp;Page facebook
                 </a></p>
