--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ title: Créaphé
                 </blockquote>
             </div>
             <div class="col-lg-6">
-                <p>Papa deux petits poussins, passionné par les nouvelles technologies, il a été également présent depuis le début du projet. Il est le responsable du site web.</p>
+                <p>Papa de deux petits poussins, passionné par les nouvelles technologies, il a été également présent depuis le début du projet. Il est le responsable du site web.</p>
             </div>
         </div>
     </div>
