--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@ title: Créaphé
 <section id="association">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-sm-12 text-center">
                 <h1>Le projet associatif Créaphé</h1>
                 <hr>
             </div>
         </div>
         <div class="row">
-        	<div class="col-lg-6">
+        	<div class="col-sm-6">
 				<img class="img-responsive" src="{{site.baseurl}}/public/img/creaphe_image_asso.png">
             </div>
-            <div class="col-lg-6">
+            <div class="col-sm-6">
             	<p>« CRÉAPHÉ » est une association fondée en 2015, dédiée à l’expression créative, au fait main et à l’artisanat sur la métropole lilloise.<br><br>C’est avant tout un lieu de partage, chaleureux, amical, convivial et de rencontres pour tous ceux qui aiment créer, du plus grand au plus petit ! Plusieurs activités et outils seront proposés : ateliers d’artistes, à thèmes, d’éveil, kits, ou même libres; formations d’insertion professionnelle; places de coworking; bibliothèque; débats; etc.<br><br>Mais ce n’est pas que ça ! Nous aimerions également mettre, au cœur de notre projet, le soutien aux créatifs, désireux de se faire connaître. Pour cela, nous uliserons les actions de communication suivantes : référencement sur le site web; soirées de découvertes, expositions, show-room; créations de kits entre artistes; présences sur les marchés des créateurs et salons.<br></p>
             </div>
         </div>
@@ -24,7 +24,7 @@ title: Créaphé
 <section id="pourqui">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-sm-12 text-center">
                 <h1>Pour qui?</h1>
                 <hr>
             </div>
@@ -56,13 +56,13 @@ title: Créaphé
 <section id="objectives">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-sm-12 text-center">
                	<h1>Nos objectifs</h1>
                 <hr>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-sm-6">
             	<p class="lead">Créaphé a pour but les suivants objectifs:
 					<ul>
 <li><strong>Encourager</strong> et <strong>accompagner</strong> les pratiques artistiques,</li>
@@ -81,7 +81,7 @@ title: Créaphé
 					</ul>
 				</p>
             </div>
-            <div class="col-lg-6">
+            <div class="col-sm-6">
 				<img class="img-responsive" src="{{site.baseurl}}/public/img/arbre_mains.png">
             </div>
         </div>
@@ -91,21 +91,21 @@ title: Créaphé
 <section id="culture">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-sm-12 text-center">
                	<h1>La culture créative: nos valeurs</h1>
                 <hr>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-sm-12">
             	<p class="lead">De l'action sociale</p>
             	<p>Créaphé travaille à renforcer le lien entre les personnes issues de tous horizons et met en place des projets humains au profit de tous</p>
             </div>
-            <div class="col-lg-12">
+            <div class="col-sm-12">
             	<p class="lead">De l'action culturelle et artistique</p>
             	<p>Entre la couture et le numérique, entre le tricot et la photo, entre la sérigraphie et la musique, il n'y a parfois qu'un pas à faire! Nous vous invitons à le franchir par toute une série d'actions, de rencontres, d'expositions, d'ateliers.</p>
             </div>
-            <div class="col-lg-12">
+            <div class="col-sm-12">
             	<p class="lead">De l'action éducative</p>
             	<p>Créaphé mettra en place des projets afin de favoriser l'apprentissage par le ludique et le créatif, dans une démarche d'éducation populaire. Nous souhaitons mettre en place des supports pédagogiques: livres, vidéos, internet, kits, magazines.</p>
             </div>
@@ -117,44 +117,44 @@ title: Créaphé
 <section id="members">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-sm-12 text-center">
                 <h1>L'équipe de départ</h1>
                 <hr>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-sm-6">
                 <p class="name lead">Tania Blanquart</p>
                 <blockquote>
                     <p>Fais de ta vie un rêve, et d’un rêve, une réalité</p>
                     <footer>Le Petit Prince de Antoine de Saint-Exupéry</footer>
                 </blockquote>
             </div>
-            <div class="col-lg-6">
+            <div class="col-sm-6">
                 <p>Maman de deux petits poussins, passionnée par l'art et la création, elle est la fondatrice du projet. Elle mène depuis Septembre 2014, le début des études, la définition et la mise en place du projet.</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-sm-6">
                 <p class="name lead">Annelise Ayatsou</p>
                 <blockquote>
                     <p>Soyez le changement que vous voulez voir dans le monde.</p>
                     <footer>Ghandi</footer>
                 </blockquote>
             </div>
-            <div class="col-lg-6">
+            <div class="col-sm-6">
                 <p>Maman d'une petite puce, elle a rejoint le projet au cours de la phase de création du nom et du statut associatif en janvier 2015. Elle a inauguré une phase d'ouverture et d'appropriation pour tout partenaire intéressé par le projet.</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-sm-6">
                 <p class="name lead">Alexandre Blanquart</p>
                 <blockquote>
                     <p>Beaucoup encore il te reste à apprendre.</p>
                     <footer>Maître Yoda</footer>
                 </blockquote>
             </div>
-            <div class="col-lg-6">
+            <div class="col-sm-6">
                 <p>Papa de deux petits poussins, passionné par les nouvelles technologies, il a été également présent depuis le début du projet. Il est le responsable du site web.</p>
             </div>
         </div>
@@ -184,13 +184,13 @@ title: Créaphé
 <section id="contact">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-sm-12 text-center">
                 <h1>Nous contacter</h1>
                 <hr>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-sm-6">
                 <p class="lead">Pour nous soutenir, adhérer, donner un coup de main et concrétiser ce projet, contactez-nous: </p>
                 <p><a href="https://www.facebook.com/pages/Cr%C3%A9aph%C3%A9/609595845842344" class="btn btn-sm btn-default">
                     <i class="fa fa-facebook"></i>&nbsp;&nbsp;Page facebook
@@ -202,7 +202,7 @@ title: Créaphé
                     <i class="fa fa-home"></i>&nbsp;&nbsp;Lille (à la recherche actuellement d'un local)
                 </a></p>
             </div>
-            <div class="col-lg-6">
+            <div class="col-sm-6">
                 <div id="map-canvas"></div>
             </div>
         </div>
