preparing the future

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Créaphé
         </div>
         <div class="row">
         	<div class="col-sm-6">
-				<img class="img-responsive" src="{{site.baseurl}}/public/img/creaphe_image_asso.png">
+				<img class="img-responsive" src="{{site.baseurl}}public/img/creaphe_image_asso.png">
             </div>
             <div class="col-sm-6">
             	<p>« CRÉAPHÉ » est une association fondée en 2015, dédiée à l’expression créative, au fait main et à l’artisanat sur la métropole lilloise.<br><br>C’est avant tout un lieu de partage, chaleureux, amical, convivial et de rencontres pour tous ceux qui aiment créer, du plus grand au plus petit ! Plusieurs activités et outils seront proposés : ateliers d’artistes, à thèmes, d’éveil, kits, ou même libres; formations d’insertion professionnelle; places de coworking; bibliothèque; débats; etc.<br><br>Mais ce n’est pas que ça ! Nous aimerions également mettre, au cœur de notre projet, le soutien aux créatifs, désireux de se faire connaître. Pour cela, nous uliserons les actions de communication suivantes : référencement sur le site web; soirées de découvertes, expositions, show-room; créations de kits entre artistes; présences sur les marchés des créateurs et salons.<br></p>
@@ -82,7 +82,7 @@ title: Créaphé
 				</p>
             </div>
             <div class="col-sm-6">
-				<img class="img-responsive" src="{{site.baseurl}}/public/img/arbre_mains.png">
+				<img class="img-responsive" src="{{site.baseurl}}public/img/arbre_mains.png">
             </div>
         </div>
     </div>
